@@ -3229,24 +3229,36 @@ All S4 classes to be used outside the package need to be listed in an
 using @code{exportClassPattern}.@footnote{As from @R{} 2.13.0 this
 defaults to the same pattern as @code{exportPattern}: use something like
 @code{exportClassPattern("^$")} to override this.} in the same style as
-for @code{exportPattern} Generics for which S4 methods are defined need
-to be declared in an @code{exportMethods} directive, and where the
-generics are formed by taking over existing functions, those functions
-need to be imported (explicitly unless they are defined in the
-@code{base} namespace).
+for @code{exportPattern}.
+To export methods for generics from other packages an
+@code{exportMethods} directive can be used.
 
 Note that exporting methods on a generic in the namespace will also
 export the generic, and exporting a generic in the namespace will also
-export its methods.  Where a generic has been created in the package
-solely to add S4 methods to it, it can be declared @emph{via} either or
-both of @code{exports} or @code{exportMethods}, but the latter seems
-clearer (and is used in the @pkg{stats4} example above).  On the other
-hand, where a generic is created in a package without setting any
-methods for it (such as @code{AIC} in @pkg{stats4}), @code{exports} must
-be used.
+export its methods.  If the generic function is not local to this
+package, either because it was imported as a generic function or because
+the non-generic version has been made generic
+solely to add S4 methods to it (as for functions such as @code{plot} in
+the example above), it can be declared @emph{via} either or
+both of @code{export} or @code{exportMethods}, but the latter is
+clearer (and is used in the @pkg{stats4} example above).
+In particular, for primitive functions there is no generic function, so
+@code{export} would export the primitive, which makes no sense.  On the other
+hand, if the generic is local to this package, it is more natural to
+export the function itself using @code{export()}, and this @emph{must} be
+done if an implicit generic
+is created without setting any
+methods for it (as is the case for @code{AIC} in @pkg{stats4}).
 
-Further, a package using S4 classes and methods defined in another
-package needs to import them, with directives
+A non-local generic function is only exported to ensure that calls to
+the function will dispatch the methods from this package (and that is
+not done or required when the methods are for primitive functions).  For
+this reason, you do not need to document such implicitly created generic
+functions, and @code{undoc} in package @pkg{tools} will not report them.
+
+If a package uses S4 classes and methods exported from another
+package, but does not import the entire namespace of the other package,
+it needs to import the classes and methods explicitly, with directives
 
 @findex importClassesFrom
 @findex importMethodsFrom
@@ -3292,11 +3304,6 @@ respectively.
 
 Note that @code{importMethodsFrom} will also import any generics defined
 in the namespace on those methods.
-
-If your package imports the whole of a namespace, it will automatically
-import the classes from that namespace.  It will also import methods,
-but it is best to do so explicitly, especially where there are methods
-being imported from more than one namespace.
 
 
 @node Writing portable packages, Diagnostic messages, Package namespaces, Creating R packages
